--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,6 +9,9 @@
 		"expect": true,
 		"app": true,
 		"request": true,
+		"td": true,
+		"Joi": true,
+		"joiAssert": true,
 		"beforeEach": true
 	}
 }
