--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "body-parser": "^1.17.1",
     "express": "^4.15.2",
     "http-status": "^1.0.1",
+    "jwt-simple": "^0.5.1",
+    "passport": "^0.3.2",
+    "passport-jwt": "^2.2.1",
     "sequelize": "^3.30.4",
     "sqlite3": "^3.1.8"
   },
